--- a/index.html
+++ b/index.html
@@ -68,15 +68,12 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">
-                                                <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="projects.html">Projects</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
                                                 <!-- Header btn -->
                                                 <li>
                                                     <div class="header-right-btn ml-40">
-                                                        <a href="#" class="btn"><img src="assets/img/icon/smartphone.svg" alt="">(10) 892-293 2678</a>
+                                                        <a href="contact.html" class="btn"><img src="assets/img/icon/smartphone.svg" alt="">Contact us</a>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -150,7 +147,7 @@
                                 Not only can do our drones capture incredible images, they can also capture videos in 4K.
 
                             </p>
-                            <a href="#" class="btn black-btn">Explore services</a>
+                            <a href="services.html" class="btn black-btn">Explore services</a>
                         </div>
                     </div>
                     <div class="offset-xl-0 col-xl-6 offset-lg-0 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
@@ -304,9 +301,9 @@
                     <div class="col-xl-5 col-lg-5 col-md-10">
                         <div class="section-tittle  mb-90">
                             <h2>How we work?</h2>
-                            <p class="tittle-pera1">Inasfa reprehenderit in voluptate velit esse  cillum reeut cupidatatfug nulla pariatur.</p>
-                            <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur. Excepteur sintxsdfas occaecat.</p>
-                            <a href="#" class="btn black-btn">Start a Project</a>
+                            <p class="tittle-pera1">We have a simple 3 step approach.</p>
+                            <p>Our simple approach is laid out on the right. If you'd like to discuss you're requirements, simple reach out and a member of our team will get back to you.</p>
+                            <a href="contact.html" class="btn black-btn">Get in touch</a>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-6 col-md-8">
@@ -350,11 +347,11 @@
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>Duis aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug.</p>
+                                        <p>Drone photography and videography specialists. <br>
+                                        </p>
                                     </div>
                                     <ul class="mb-40">
-                                        <li class="number"><a href="#">(80) 783 367-3904</a></li>
-                                        <li class="number2"><a href="#">contact@carwash.com</a></li>
+                                        <li class="number"><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -365,11 +362,8 @@
                             <div class="footer-tittle">
                                 <h4>Navigation</h4>
                                 <ul>
-                                    <li><a href="#">Home</a></li>
                                     <li><a href="#">About</a></li>
                                     <li><a href="#">Services</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -380,7 +374,7 @@
                                 <h4>Services</h4>
                                 <ul>
                                     <li><a href="#">Drone Mapping</a></li>
-                                    <li><a href="#"> Real State</a></li>
+                                    <li><a href="#">Real State</a></li>
                                     <li><a href="#">Commercial</a></li>
                                     <li><a href="#">Construction</a></li>
                                 </ul>
@@ -422,6 +416,19 @@
   <div id="back-top" >
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- JS here -->
 
