--- a/about.html
+++ b/about.html
@@ -122,8 +122,8 @@
                                 <img src="assets/img/gallery/about1.png" alt="">
                             </div>
                             <div class="img-cap">
-                                <span>20</span>
-                                <p>Years of experience</p>
+                                <span>4k / HDR</span>
+                                <p>Drone footage</p>
                             </div>
                         </div>
                     </div>
@@ -413,7 +413,7 @@ CONTACT FORM START
           </div>
           <!-- Footer End-->
 
-          
+
           </div>
       </footer>
       <!-- Scroll Up -->
