--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AirVenture</title>
+    <title>AirVenture | Homepage</title>
     <meta name="description" content="Aerial drone phorography and videography">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -144,7 +144,7 @@
                             <p class="about-cap-top">We'll get to know your exact requirements, and capture stunning footage.</p>
                             <p>From real estate, weddings, construction work and corporate events, we've got you covered.
                                 <br><br>
-                                Not only can do our drones capture incredible images, they can also capture videos in 4K.
+                                Not only can our drones capture incredible images, they can also capture videos in 4K.
 
                             </p>
                             <a href="services.html" class="btn black-btn">Explore services</a>
@@ -153,7 +153,7 @@
                     <div class="offset-xl-0 col-xl-6 offset-lg-0 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/gallery/about1.png" alt="">
+                                <img src="assets/img/gallery/hand-drone.png" alt="">
                             </div>
 <!-- OVERLAY ON IMAGE 
 
@@ -182,7 +182,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Residential Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>Whether you've got a property on the market and want to take stunning images, or want to just display your property in your house, we've got you covered.</p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Commercial Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>We'll help you get stunning images of your commerical property. Forget those boring images, we'll showcase your buildings in the best angles to ensure you show off your property in the best way.</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Construction Site Monitoring</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>Whether you need progress pictures of your sites or just want to monitor all building regulations are being maintained, we can help with our drones.</p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Private Events</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>Weddings, Birthdays, Baby showers and everything in between - We'll help you capture your moments with stunning images.</p>
                             </div>
                         </div>
                     </div>  
@@ -232,7 +232,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Thermal Mapping</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>If you need thermal mapping of your land or site, we've got you covered.</p>
                             </div>
                         </div>
                     </div>  
@@ -248,7 +248,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Roofing Inspections</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>We have helped many roofers showcase their work after completing their jobs, this is often upsold by the roofers as an additional service for them. If your a roofer and want to discuss commercial agreements please get in touch. </p>
                             </div>
                         </div>
                     </div>  
@@ -264,7 +264,8 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">AirBnb / Holiday Resort Images</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p> A recent study found that professional Airbnb photos can increase earnings by 40%, increase bookings by 24%, and even increase the price by 26%. With Aerial images you can really capture your property and engage with customers in a greater way than with standarf photography.
+                                </p>
                             </div>
                         </div>
                     </div>  
@@ -301,8 +302,8 @@
                     <div class="col-xl-5 col-lg-5 col-md-10">
                         <div class="section-tittle  mb-90">
                             <h2>How we work?</h2>
-                            <p class="tittle-pera1">We have a simple 3 step approach.</p>
-                            <p>Our simple approach is laid out on the right. If you'd like to discuss you're requirements, simple reach out and a member of our team will get back to you.</p>
+                            <p class="tittle-pera1">We take a simple 3 step approach.</p>
+                            <p>If you'd like to discuss you're requirements, simple reach out and a member of our team will get back to you.</p>
                             <a href="contact.html" class="btn black-btn">Get in touch</a>
                         </div>
                     </div>
@@ -311,17 +312,17 @@
                             <!-- single-item -->
                             <div class="single-items mb-50">
                                 <span>Tell Us About Your Project</span>
-                                <p>Aute irure dolor inasfa prehenderit  in voluptate velit esse cillum.</p>
+                                <p>Contact us and let us know how we can help you catpure what you need.</p>
                             </div>
                             <!-- single-item -->
                             <div class="single-items single-items2 mb-50">
                                 <span>We'll Schedule a Flight</span>
-                                <p>Aute irure dolor inasfa prehenderit in voluptate velit esse cillum.</p>
+                                <p>We'll arrange a date/time to bring our 4K HDR drones to meet your requirements.</p>
                             </div>
                             <!-- single-item -->
                             <div class="single-items single-items3 mb-50">
                                 <span>We'll Schedule a Flight</span>
-                                <p>Aute irure dolor inasfa prehenderit in voluptate velit esse cillum.</p>
+                                <p>We'll provide you with the raw unedited content, as well as edit the images to ensure your content reaches it's full potential.</p>
                             </div>
                         </div>
                     </div>
