--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+
+
+
 </head>
 
 <body>
@@ -112,8 +116,8 @@
                             <p class="about-cap-top">Established in 2022, we have worked on many projects throughout the UK.</p>
                             <p>What started off as a hobby, quickly became more than that as we have been able to help capture stunning images to meet our clients' requirements. 
                                 <br><br>
-                            We've worked with private landlords, construction companies, private roofers and companies/individuals wanting to capture unique images for their social events. If you'd like to enquire about how we work together, feel free to get in touch by clicking here. </p>
-                            <a href="#" class="btn black-btn">Explore services</a>
+                            We've worked with private landlords, construction companies, private roofers and companies/individuals wanting to capture unique images for their social events. If you'd like to enquire about how we work together, feel free to get in touch by <a href="contact.html" style="color:royalblue ;">clicking here.</a> </p>
+                            <a href="services.html" class="btn black-btn">Explore services</a>
                         </div>
                     </div>
                     <div class="offset-xl-0 col-xl-6 offset-lg-0 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
@@ -384,9 +388,10 @@ CONTACT FORM START
                         <div class="single-footer-caption mb-50">
                             <!-- social -->
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+
                             </div>
                         </div>
                     </div>
@@ -435,6 +440,7 @@ CONTACT FORM START
     <script src="./assets/js/wow.min.js"></script>
     <script src="./assets/js/animated.headline.js"></script>
     <script src="./assets/js/jquery.magnific-popup.js"></script>
+<script src="https://kit.fontawesome.com/1e9b27f551.js" crossorigin="anonymous"></script>
 
     <!-- Date Picker -->
     <script src="./assets/js/gijgo.min.js"></script>
