--- a/services.html
+++ b/services.html
@@ -105,66 +105,66 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat mb-40">
                             <div class="cat-icon">
-                                <img src="assets/img/gallery/services7.png" alt="">
+                                <img src="assets/img/gallery/airbnb.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h1>Residential Real Estate Photography</h1>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <h1>AirBnb / Holiday Resort Images</h1>
+                                <p>A recent study found that professional Airbnb photos can increase earnings by 40%, increase bookings by 24%, and even increase the price by 26%. With Aerial images you can really capture your property and engage with customers in a greater way than with standarf photography.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat mb-40">
                             <div class="cat-icon">
-                                <img src="assets/img/gallery/services8.png" alt="">
+                                <img src="assets/img/gallery/services04.png" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Private Events</a></h5>
+                                <p>Weddings, Birthdays, Baby showers and everything in between - We'll help you capture your moments with stunning images.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat mb-40">
+                            <div class="cat-icon">
+                                <img src="assets/img/gallery/roofing.png" alt="">
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Roofing Inspections</a></h5>
+                                <p>We have helped many roofers showcase their work after completing their jobs, this is often upsold by the roofers as an additional service for them. If your a roofer and want to discuss commercial agreements please get in touch.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat mb-40">
+                            <div class="cat-icon">
+                                <img src="assets/img/gallery/services2.png" alt="">
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Commercial Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>We'll help you get stunning images of your commerical property. Forget those boring images, we'll showcase your buildings in the best angles to ensure you show off your property in the best way.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat mb-40">
                             <div class="cat-icon">
-                                <img src="assets/img/gallery/services9.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Construction Site Monitoring</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/services4.png" alt="">
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="services.html">Commercial Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat mb-40">
-                            <div class="cat-icon">
-                                <img src="assets/img/gallery/services5.png" alt="">
+                                <img src="assets/img/gallery/services1.png"alt="">
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Residential Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <p>Whether you've got a property on the market and want to take stunning images, or want to just display your property in your house, we've got you covered.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-cat mb-40">
                             <div class="cat-icon">
-                                <img src="assets/img/gallery/services6.png" alt="">
+                                <img src="assets/img/gallery/thermal.png" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Commercial Real Estate Photography</a></h5>
-                                <p>Aute irure dolor inasfa reprehenderit in voluptate velit esse cillum reeut cupidatatfug nulla pariatur.</p>
+                                <h5><a href="services.html">Thermal mapping</a></h5>
+                                <p>If you need thermal mapping of your land or site, we've got you covered.</p>
                             </div>
                         </div>
                     </div>
@@ -228,9 +228,9 @@
                         <div class="single-footer-caption mb-50">
                             <!-- social -->
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
                             </div>
                         </div>
                     </div>
@@ -297,6 +297,8 @@
     <script src="./assets/js/waypoints.min.js"></script>
     <script src="./assets/js/jquery.countdown.min.js"></script>
     <script src="./assets/js/hover-direction-snake.min.js"></script>
+<script src="https://kit.fontawesome.com/1e9b27f551.js" crossorigin="anonymous"></script>
+
 
     <!-- contact js -->
     <script src="./assets/js/contact.js"></script>
