--- a/contact.html
+++ b/contact.html
@@ -168,9 +168,9 @@
                         <div class="single-footer-caption mb-50">
                             <!-- social -->
                             <div class="footer-social">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
                             </div>
                         </div>
                     </div>
@@ -229,6 +229,7 @@
         <script src="./assets/js/waypoints.min.js"></script>
         <script src="./assets/js/jquery.countdown.min.js"></script>
         <script src="./assets/js/hover-direction-snake.min.js"></script>
+<script src="https://kit.fontawesome.com/1e9b27f551.js" crossorigin="anonymous"></script>
 
         <!-- contact js -->
         <script src="./assets/js/contact.js"></script>
