--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center">
                                         <div class="founder-img">
-                                            <img src="assets/img/icon/testimonial.png" alt="">
+                                            <img src="assets/img/icon/shummus.png" alt="">
                                         </div>
                                         <div class="founder-text">
                                             <span>Shummus Shah</span>
@@ -185,7 +185,7 @@
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center">
                                         <div class="founder-img">
-                                            <img src="assets/img/icon/testimonial.png" alt="">
+                                            <img src="assets/img/icon/curtis.png" alt="">
                                         </div>
                                         <div class="founder-text">
                                             <span>Curtis Allen</span>
